# simpleshell

./: .eslintrc.json  .gitignore  .prettierrc.json  README.md  README_zh.md  build.js  electron-builder.yml  electron.vite.config.ts  eslint.config.js  forge.config.js  package-lock.json  package.json  preload-sandbox.md  remove.md  service.spec  todo.md  tsconfig.node.json  tsconfig.web.json  webpack.main.config.js  webpack.renderer.config.js  webpack.rules.js
.claude/: settings.local.json
.github/workflows/: release.yml
.webpack/main/: index.js  index.js.map
backend/: chat_history.json  requirements.txt  service.py
scripts/: check-accessibility.js  check-background-session.js  check-error-classification.js  check-i18n.js  check-ipc-schema.js  check-latency-service.js  check-local-terminal-embedded.js  check-preload-sandbox.js  check-reconnect-intentional-close.js  check-reconnect-retry-policy.js  check-reconnect-tab-status.js  check-ssh-connection-stability.js  check-todo.js  check-update-service.js  check-webterminal-command-suggestion.js  check-webterminal-prompt-shortcut.js  check-webterminal-reconnect-ui.js  check-webterminal-selection-stability.js  check-webterminal-surface.js  check-window-native-feel.js  generate-checksums.js  prepare-rust-sidecar.js  prepare-winstaller-vendor.js  release-check.js  run-checks.js
src/: App.vue  AppExample.jsx  app-refactored.jsx  app.jsx  background.js  index.css  index.html  main-refactored.js  main.js  preload.js  renderer.js
transfernative/transfer-sidecar/: Cargo.toml
transfernative/transfer-sidecar/src/: main.rs
(+358 files in other folders)
