[package]
name = "transfer-sidecar"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22"
bytes = "1.10"
futures-util = "0.3"
openssh-sftp-client = "0.15"
russh = { version = "0.58", default-features = false, features = ["flate2", "ring", "rsa"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ssh-key = "0.6"
tokio = { version = "1", features = ["fs", "io-std", "io-util", "macros", "rt-multi-thread"] }
